--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
+@tailwind utilities;
 
 @custom-variant dark (&:is(.dark *));
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+
+@layer utilities {
+  .bg-gradient-custom {
+    background: linear-gradient(180deg, rgba(94, 193, 105, 1) 0%, rgba(44, 91, 50, 1) 100%);
+  }
+}
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
