--- a/src/index.css
+++ b/src/index.css
@@ -182,3 +182,45 @@ input[type='number'] {
   font-weight: 500;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Gilroy-Extrabold';
+  src: url('public/Fonts/Gilroy-ExtraBold.ttf');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy-Bold';
+  src: url('public/Fonts/Gilroy-Bold.ttf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+font-face {
+    font-family: 'Gilroy-Regular';
+    src: url('public/Fonts/Gilroy-Regular.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+.gilroy-regular {
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.gilroy-extrabold {
+  font-family: 'Gilroy-Extrabold', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.gilroy-bold {
+  font-family: ' Gilroy-Bold', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
