--- a/src/index.css
+++ b/src/index.css
@@ -195,28 +195,28 @@ input[type='number'] {
 
 @font-face {
   font-family: 'Gilroy-Extrabold';
-  src: url('public/Fonts/Gilroy-ExtraBold.ttf');
+  src: url('/Fonts/Gilroy-ExtraBold.ttf');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gilroy-SemiBold';
-  src: url('public/Fonts/Gilroy-SemiBold.ttf');
+  src: url('/Fonts/Gilroy-SemiBold.ttf');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gilroy-Bold';
-  src: url('public/Fonts/Gilroy-Bold.ttf');
+  src: url('/Fonts/Gilroy-Bold.ttf');
   font-weight: 700;
   font-style: normal;
 }
 
 font-face {
   font-family: 'Gilroy-Regular';
-  src: url('public/Fonts/Gilroy-Regular.ttf');
+  src: url('/Fonts/Gilroy-Regular.ttf');
   font-weight: 400;
   font-style: normal;
 }
